Mudando outra letra do titulo

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos da Alura bora mudar aqui</title>
+    <title>Cursos da Alura Bora Mudar aqui</title>
 </head>
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker</li>
+        <li>Docker asap</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no desenvolvimento de software anao vei</li>
     </ul>
