--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Vagrant</li>
         <li>Docker asap</li>
         <li>Ansible</li>
-        <li>Integração Contínua: Maturidade e Produtividade no desenvolvimento de software</li>
+        <li>Integração Contínua: Maturidade e Produtividade no desenvolvimento de softwareasa</li>
     </ul>
 </body>
 </html>
